[metadata]
name = LogicCircuit
version = 0.1
description = Simple circuit builder only using logic gates
author = TINYT1ME
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: pygame
    Development Status :: 2 - Pre-Alpha

[options]
packages =
    logiccircuit
install_requires =
    pygame>=2.1
python_requires = >=3.6

[options.extras_require]
testing =
    flake8==4.0.1
    tox===3.24.5
    pytest==6.2.5
    pytest-cov==3.0.0
    mypy==0.931

[options.package_data]
logiccircuit = py.typed

[black]
line-length = 119


