[metadata]
name = LogicCircuit
version = 1.0.0
description = Simple circuit builder only using logic gates
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TINYT1ME/LogicCircuit
author = TINYT1ME
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: pygame
    Development Status :: 2 - Pre-Alpha

[options]
packages =
    logiccircuit
install_requires =
    pygame>=2.1
python_requires = >=3.6

[options.extras_require]
testing =
    black==21.12b0
    mypy==0.931

[options.package_data]
logiccircuit = py.typed
